--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -13,3 +13,42 @@
     left:50%;
     transform: translate(-50%,-50%);
 }
+
+//MEDIA QUERY MANAGER
+/*
+0-600px : Phone
+600px-900px : Tablet portrait
+900px-1200px: Tablet landscape
+
+[1200px- 1800px: Desktop] - our normal styles
+
+1800px + : Big desktop  
+*/
+
+/*
+$breakpoint argument choices
+-phone
+-tab-port
+-tab-land
+-big-desktop 
+*/
+@mixin respond($breakpoint){
+
+    //tutaj rem nie będą odpowiadać ustawieniom, które dodaliśmy
+    //ale będą ustawione na 16px( tak jak domyślnie w przeglądarce)
+    //UŻYWAMY EM nie REM
+    //1em=16px
+    @if $breakpoint ==phone{
+        @media(max-width: 37.5em){@content}; // 600px/16 = 37.5 EM!!!!
+    }
+    @if $breakpoint ==tab-port{
+        @media(max-width: 56.25em){@content}; //900px/16 = 56.25 EM
+    }
+    @if $breakpoint ==tab-land{
+        @media(max-width: 75em){@content}; //1200px/16 = 75 EM
+    }
+    @if $breakpoint ==big-desktop{
+        @media(min-width: 112.5em){@content}; // 1800px/16 = 112.5 EM
+    }
+
+}
