Making responsive design for all page

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,10 @@
     /* clip-path: polygon(0 0 , 100% 50% , 0 100%); triangle */
     position:relative;
 
+    @include respond(phone){
+        -webkit-clip-path: polygon(0 0 , 100% 0, 100% 90vh, 0 100%);
+        clip-path: polygon(0 0 , 100% 0, 100% 90vh, 0 100%);
+    }
     &__logo_box{
         position:absolute;
         top:4rem;
