--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -14,6 +14,7 @@
     transform: translate(-50%,-50%);
 }
 
+//ORDER Base + typography > general layout + grid > page layout> components
 //MEDIA QUERY MANAGER
 /*
 0-600px : Phone
