--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -51,11 +51,19 @@
         opacity:0;
         transform:translate(-50%, -50%) scale(.25);
         transition: all .5s .2s;
+        @include respond(tab-land){
+            display:inline;
+        }
     }
 
     &__left{
         width:33.33333%;
         display:table-cell;
+        
+
+        @include respond(tab-land){
+            display:inline;
+        }
     }
 
     &__right{
@@ -63,12 +71,32 @@
         display:table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+        @include respond(tab-land){
+            display:inline;
+        }
     }
 
     &__img{
         display: block;
         width: 100%;
+        @include respond(tab-land){
+            display: inline;
+            width:30%;
+        }
+
+        &--one{
+            @include respond(tab-land){
+                margin-left:10rem;
+            }
+        }
+
+        &--two{
+            @include respond(tab-land){
+                margin-left:10rem;
+            }
+        }
     }
+
 
     &__text{
         font-size: 1.4rem;
@@ -86,5 +114,9 @@
         -ms-hyphens:auto;
         -webkit-hyphens:auto;
         hyphens:auto;
+        @include respond(tab-land){
+            padding:2rem;
+            margin-bottom: 2rem;
+        }
     }
 }
