--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,14 @@
     visibility: hidden;
     transition: all .3s;
 
+    //jeśli przeglądarka wspiera dane właśności(backdrop-filter) to wykonaj to co w nawiasach klamrowych
+    //jeśli nie to wykona wszystko poza tym co znajduje się w supports
+    @supports (-webkit-backdrop-filter: blur(10px) ) or (backdrop-filter: blur(10px)){
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, .3);
+    }
+
     //OPEN STATES( kiedy okienko jest otwarte)
     &:target{
         opacity:1;
