--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,26 @@
 .header {
-    height: 95vh;
+    height: 85vh;
     background-image: linear-gradient(to right bottom, 
     rgba($color-primary-light, 0.8),
-    rgba($color-primary-dark, 0.801)), url("../img/hero.jpg");
+    rgba($color-primary-dark, 0.801)), url("../img/hero-small.jpg");
     background-size: cover;
     background-position: top;
-    -webkit-clip-path: polygon(0 0 , 100% 0, 100% 75vh, 0 100%);
-    clip-path: polygon(0 0 , 100% 0, 100% 75vh, 0 100%);
-    /* clip-path: polygon(0 0 , 100% 50% , 0 100%); triangle */
     position:relative;
+
+    @supports(clip-path: polygon(0 0))or (-webkit-clip-path: polygon(0 0)){
+        -webkit-clip-path: polygon(0 0 , 100% 0, 100% 75vh, 0 100%);
+        clip-path: polygon(0 0 , 100% 0, 100% 75vh, 0 100%);
+            /* clip-path: polygon(0 0 , 100% 50% , 0 100%); triangle */
+        height: 95vh;
+    }
+
+    @media (min-resolution:192dpi)and(min-width:37.5em),
+    (-webkit-min-device-pixel-ratio:2)and(min-width:37.5em),
+    (min-width:125em){ // 192dpi ->2x
+        background-image: linear-gradient(to right bottom, 
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.801)), url("../img/hero.jpg");
+    }
 
     @include respond(phone){
         -webkit-clip-path: polygon(0 0 , 100% 0, 100% 90vh, 0 100%);
